# idevision-cdn

./: .gitignore  Cargo.toml  config.example.json
src/: db.rs  errors.rs  image.rs  imaging.rs  main.rs
static/: wordlist.txt
