[package]
name = "site-slave"
version = "0.1.0"
authors = ["IAmTomahawkx <iamtomahawkx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
#async-postgres = "0.5.1"
image = "0.23.14"
rand = "0.8.3"
qstring = "0.7.2"
derive_more = "0.99.13"
json = "0.12.4"
lazy_static = "1.4.0"