[package]
name = "site-slave"
version = "0.1.0"
authors = ["IAmTomahawkx <iamtomahawkx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
actix-service = "2.0.0"
bytes = "1.0.1"
tokio-postgres = "0.7.2"
image = "0.23.14"
rand = "0.8.3"
qstring = "0.7.2"
derive_more = "0.99.13"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.14"
iovec = "0.1.4"
reqwest = "0.11.3"
serde = "1.0.126"
serde_json = "1.0.64"